--- a/css/chat.css
+++ b/css/chat.css
@@ -9,6 +9,9 @@
     width: 100%;
     padding: 5px 0px;
     background-color: white;
+    box-shadow: 0 13px 27px -5px rgba(50,50,93,.25), 
+    0 8px 16px -8px rgba(0,0,0,.3), 
+    0 -6px 16px -6px rgba(0,0,0,.025);
 }
 
 .chats-body .header,
@@ -34,7 +37,9 @@
     background-color: #fcfcfc;
     padding: 0px 20px;
     border-radius: 40px;
-    box-shadow: 0 13px 27px -5px rgba(50,50,93,.25), 0 8px 16px -8px rgba(0,0,0,.3), 0 -6px 16px -6px rgba(0,0,0,.025);
+    box-shadow: 0 13px 27px -5px rgba(50,50,93,.25), 
+    0 8px 16px -8px rgba(0,0,0,.3), 
+    0 -6px 16px -6px rgba(0,0,0,.025);
 }
 
 .chat__write .chat__write-column {
