--- a/css/chat.css
+++ b/css/chat.css
@@ -46,6 +46,25 @@
     right: 10px;
 }
 
+@keyframes float {
+    /* box-shadow를 변경하는 애니메이션 */
+    0% {
+        box-shadow: 0 30px 60px -12px rgba(50,50,93,.25), 
+            0 18px 36px -18px rgba(0,0,0,.3), 
+            0 -12px 36px -8px rgba(0,0,0,.025);
+    }
+    50% {
+        box-shadow: 0 30px 60px -60px rgba(50,50,93,.25), 
+            0 18px 36px -18px rgba(0,0,0,.3), 
+            0 -12px 36px -8px rgba(0,0,0,.025);
+    }
+    100% {
+        box-shadow: 0 30px 60px -12px rgba(50,50,93,.25), 
+            0 18px 36px -18px rgba(0,0,0,.3), 
+            0 -12px 36px -8px rgba(0,0,0,.025);
+    }
+}
+
 .chat__write {
     margin: 0 auto;
     bottom: 0px;
@@ -67,6 +86,7 @@
     box-shadow: 0 13px 27px -5px rgba(50,50,93,.25), 
     0 8px 16px -8px rgba(0,0,0,.3), 
     0 -6px 16px -6px rgba(0,0,0,.025);
+    animation: float 3s linear ease-in-out infinite forwards;
 }
 
 .chat__write:focus ~ .chat__icon { /* sibling selector(~) */
@@ -157,4 +177,34 @@
 .sent-message .message__bubble {
     border-bottom-right-radius: 0px;
     background-image: linear-gradient(to left, #56ccf2, #2f80ed);
+}
+
+@keyframes incomingAnim {
+    from {
+        opacity: 0;
+        transform: translateX(-200px);
+    }
+    to {
+        opacity: 1;
+        transform: none;
+    }
+}
+
+.incoming-message {
+    animation: incomingAnim .5s ease-out forwards;
+}
+
+@keyframes sentAnimation {
+    from {
+        opacity: 0;
+        transform: translateX(200px);
+    }
+    to {
+        opacity: 1;
+        transform: none;
+    }
+}
+
+.sent-message {
+    animation: sentAnimation .5s ease-out forwards; /* forwards를 넣으면 sent-message 요소가 끝까지 value를 유지 */
 }
